example/secondfile/objects/MIS_3years_OveragePrices__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Overage price list for the MIS 3 years</description>
    <fields>
        <fullName>Master_Agent__c</fullName>
        <description>Contains the price for the Master Agent</description>
        <inlineHelpText>Contains the price for the Master Agent</inlineHelpText>
        <label>Master Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum_Elite__c</fullName>
        <description>Contains the price for the Platinum Elite user</description>
        <inlineHelpText>Contains the price for the Platinum Elite user</inlineHelpText>
        <label>Platinum Elite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <description>Contains the price for the Platinum user</description>
        <inlineHelpText>Contains the price for the Platinum user</inlineHelpText>
        <label>Platinum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>MIS_3years_OveragePrices</label>
</CustomObject>